# rustier-massive-pix-transactions

./: .env
Pix/: Create Customer.bru  Create Pix Key copy.bru  Create Pix Key.bru  Generete Auth Token.bru  bruno.json  get account by customer id.bru  get by id.bru  get customers by id.bru  test.bru  teste.bru
docs/: architecture.plantuml  class.plantuml  components.plantuml  customer_microservice_clean_architecture.plantuml  database.plantuml  infraestructure.plantuml
infra/: docker-compose.yml
microservice-auth/: .env  Cargo.toml  Dockerfile  docker-compose.yml  recipe.json
microservice-auth/.cargo/: config.toml
microservice-auth/src/: main.rs
microservice-customers/: .env  Cargo.toml  Dockerfile  recipe.json  recipe.pretty.json
microservice-customers/migrations/: 00000_14082025_bootstrap_costumers_database.sql  00001_18082025_add_phone_column_to_customer.sql  00002_18082025_add_random_pix_key_type.sql
microservice-customers/sql/: create_account.sql  create_customer.sql  create_pix_key.sql  get_account_by_customer_id.sql  get_customer_by_id.sql  get_customers.sql
microservice-customers/src/: main.rs
microservice-customers/src/application/: account_service.rs  customer_service.rs  jwt_service.rs  mod.rs  pix_service.rs
microservice-customers/src/application/dto/: account_dto.rs  customer_dto.rs  mod.rs  pix_key_dto.rs
microservice-customers/src/configuration/: db.rs  migrations.rs
microservice-customers/src/domain/: account.rs  customer.rs  enums.rs  mod.rs  pix_key.rs
microservice-customers/src/infraestructure/: error.rs  mod.rs
microservice-customers/src/infraestructure/auth/: auth.rs
microservice-customers/src/infraestructure/db/: account_repo.rs  customer_repo.rs  mod.rs  pix_key_repo.rs
microservice-customers/src/infraestructure/http/: mod.rs  routes.rs
microservice-customers/src/infraestructure/http/handlers/: account_handler.rs  customer_handler.rs  mod.rs  pix_handler.rs
microservice-customers/src/shared/: cnpj.rs  cpf.rs  email.rs  mod.rs  phone.rs  sha3.rs
microservice-ledgers/migrations/: 00000_14082025_bootstrap_ledgers_database.sql
microservice-ledgers/src/product/: mod.rs  product.rs  service.rs
microservice-ledgers/src/tests/: products_test.rs
microservice-transfers/migrations/: 00000_14082025_bootstrap_transfers_database.sql
microservice-transfers/src/configuration/: db.rs  migrations.rs
microservice-transfers/src/product/: controller.rs  persistence.rs
microservice-transfers/src/tests/: mod.rs
