[package]
name = "microservice-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
