[package]
name = "rust_simple_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
postgres-types = { version = "0.2.9", features = [
    "with-chrono-0_4",
    "with-uuid-1",
] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sha3 = "0.10.8"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
