[package]
name = "rust_simple_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
bytes = "1.10.1"
chrono = { version = "0.4.39", features = ["serde"] }
confik = "0.14.0"
deadpool-postgres = {version = "0.14.1", features = ["serde"]}
derive_more = "2.0.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
postgres-derive = "0.4.6"
postgres-types = { version = "0.2.9", features = ["derive", "with-chrono-0_4", "with-uuid-1"] }
rust_decimal = {version = "1.37.2", features = ["db-postgres"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.142"
sha3 = "0.10.8"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "rust_decimal"
] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.12"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
